@@ -1,3 +1,4 @@
+02 Jul 2002 Fixes to ckdtab in dasdtab.c - Greg Smith
 02 Jul 2002 Correct Erase All Unprotected 3270 order - Tomas Fott
 01 Jul 2002 Complete IPL function in web interface - Jan Jaeger
 30 Jun 2002 Fix minor "inet_ntoa" bug in 'connect_client' function
